--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <body>
 
     <header>
-        <button id="home" onclick="ROUTER.load('home')">Home</button>
-        <button id="About" onclick="ROUTER.load('about')">About</button>
-        <button id="Contact" onclick="ROUTER.load('contact')">Contact</button>
+        <nav class="navbar">
+            <button id="home" onclick="ROUTER.load('home')">Home</button>
+            <button id="About" onclick="ROUTER.load('about')">About</button>
+            <button id="Contact" onclick="ROUTER.load('contact')">Contact</button>
+            <div class="socials">
+                facebook whatsapp Gmail
+            </div>
+        </nav>
     </header>
 
-    <div id="content"></div>
+    <div class="body_container" id="content"></div>
 
 <script src="./js/router.js"></script>
 <script src="./js/routes.js"></script>
