--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog SPA</title>
+    <script src="https://kit.fontawesome.com/84b3f3b50e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,7 +17,10 @@
             <button id="About" onclick="ROUTER.load('about')">About</button>
             <button id="Contact" onclick="ROUTER.load('contact')">Contact</button>
             <div class="socials">
-                facebook whatsapp Gmail
+                <i class="fa-brands fa-linkedin social_icons"></i>
+                <i class="fa-solid fa-envelope social_icons"></i>
+                <i class="fa-brands fa-whatsapp social_icons"></i>
+                <i class="fa-brands fa-facebook social_icons"></i>
             </div>
         </nav>
     </header>
