change to music blog design

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <button id="home" onclick="ROUTER.load('home')">Home</button>
             <button id="About" onclick="ROUTER.load('about')">About</button>
             <button id="Contact" onclick="ROUTER.load('contact')">Contact</button>
+            <div class="title_logo">
+                <h1>EBEN J MUSIC</h1>
+            </div>
             <div class="socials">
                 <i class="fa-brands fa-linkedin social_icons"></i>
                 <i class="fa-solid fa-envelope social_icons"></i>
