--- a/index.html
+++ b/index.html
@@ -20,16 +20,29 @@
             </ul>
             
             <div class="title_logo">
+                <a href="https://www.youtube.com/channel/UCWNxwz50nchcPLfa_yfOBVw?sub_confirmation=1" target="_blank">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
                 <h1>EBEN J MUSIC</h1>
             </div>
             <div class="socials">
-                <i class="fa-brands fa-linkedin social_icons"><a href="www.linkedin.com/in/josueventura"></a></i>
-                <i class="fa-solid fa-envelope social_icons"><a href="mailto:josueandresventura@gmail.com"></a></i>
+                <a href="https://www.linkedin.com/in/josueventura/" target="_blank">
+                    <i class="fa-brands fa-linkedin social_icons"></i>
+                </a>
+                <a href="mailto:josueandresventura@gmail.com" target="_blank">
+                    <i class="fa-solid fa-envelope social_icons"></i>
+                </a>
                 <div class="whatsapp">
                     <i class="fa-brands fa-whatsapp social_icons"></i>
                     <p>809-481-7449</p>
                 </div>
-                <i class="fa-brands fa-facebook social_icons"><a href="https://www.facebook.com/josueventuramusic"></a></i>
+                <a href="https://www.facebook.com/josueventuramusic" target="_blank">
+                    <i class="fa-brands fa-facebook social_icons"></i>
+                </a>
+                <a href="https://www.instagram.com/josueventuramusic/" target="_blank">
+                    <i class="fa-brands fa-instagram social_icons"></i>
+                </a>
+                
             </div>
         </nav>
     </header>
