--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="bg_body">
+<body>
 
     <header>
         <nav class="navbar">
