some changes more

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <a href="https://www.youtube.com/channel/UCWNxwz50nchcPLfa_yfOBVw?sub_confirmation=1" target="_blank">
             <i class="fa-brands fa-youtube"></i>
         </a>
-        <h1>EBEN J MUSIC</h1>
+        <h1>EBEN J MUSIC
+            <p>Suscribete</p>
+        </h1>
     </div>
 
     <div class="body_container" id="content"></div>
@@ -40,7 +42,7 @@
         </a>
         <div class="whatsapp">
             <i class="fa-brands fa-whatsapp social_icons"></i>
-            <p>809-481-7449</p>
+            <p class="phone">809-481-7449</p>
         </div>
         <a href="https://www.facebook.com/josueventuramusic" target="_blank">
             <i class="fa-brands fa-facebook social_icons"></i>
