--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-
-    <header>
+    <i class="fa-solid fa-bars btn_menu"></i>
+    <i class="fa-solid fa-xmark btn_close-menu"></i>
+    <header class="nav">
+        
         <nav class="navbar">
             <ul>
                 <li class="btnNav" id="home" onclick="ROUTER.load('home')">Home</li>
@@ -42,7 +44,7 @@
         </a>
         <div class="whatsapp">
             <i class="fa-brands fa-whatsapp social_icons"></i>
-            <p class="phone">809-481-7449</p>
+            <p class="phone hidden_number">809-481-7449</p>
         </div>
         <a href="https://www.facebook.com/josueventuramusic" target="_blank">
             <i class="fa-brands fa-facebook social_icons"></i>
