--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="https://www.facebook.com/josueventuramusic" target="_blank">
             <i class="fa-brands fa-facebook social_icons"></i>
         </a>
-        <a href="https://www.instagram.com/josueventuramusic/" target="_blank">
+        <a href="https://www.instagram.com/invites/contact/?i=mb1hsqdgtsqt&utm_content=lvv95gi" target="_blank">
             <i class="fa-brands fa-instagram social_icons"></i>
         </a>
         
